--- a/addons/rafaelas_localization/plugin.cfg
+++ b/addons/rafaelas_localization/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
 name="Rafaela's Localization System"
-description=""
-author="RafaelaOverflow"
-version=""
-script="rafaelas_localization.gd"
+description="An addon for handling localization and manipulating text with 'text functions'."
+author="Rafaela Overflow"
+version="1.0"
+script="plugin.gd"
